# bt-mqtt

./: .gitignore  AGENTS.md  README.md  STATUS.md  devenv.nix  docker-compose.yml
docker/: scanner.Dockerfile  subscriber.Dockerfile
docs/: README.md  architecture.md  database-schema.md  mqtt-schema.md  roadmap.md
docs/decisions/: 0001-python-scanner.md  0002-typescript-subscriber.md  0003-mqtt-topic-structure.md  0004-processing-pipeline.md  0005-deduplication-strategy.md  0006-parser-plugin-system.md  0007-scanner-id-manual-config.md  0008-kysely-migrations.md  0009-mqtt-failure-drop-messages.md  0010-parser-manual-registration.md  README.md
docs/features/: README.md
docs/features/phase-1/: ble-scanner.md  database-setup.md  mqtt-publisher.md  mqtt-subscriber.md  raw-storage.md
docs/features/phase-2/: blocklist.md  deduplication.md  device-registry.md  environmental-parser.md  parser-system.md  scanner-heartbeat.md
docs/features/phase-3/: beacon-parser.md  data-aggregation.md  query-api.md
docs/features/phase-4/: custom-web-ui.md  grafana-dashboards.md
scanner/: .gitignore  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  pyproject.toml
scanner/config/: scanner.example.yaml
scanner/src/scanner/: __init__.py  __main__.py  app.py  ble_scanner.py  config.py  deduplicator.py  logging_config.py  mqtt_publisher.py
scanner/tests/: __init__.py  test_config.py  test_deduplicator.py
scripts/: init-db.sql
subscriber/: README.md
subscriber/config/: subscriber.example.yaml
